k8s/base/availability-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: availability-service
  namespace: medicojobs
  labels: &availabilityLabels
    app.kubernetes.io/name: availability-service
    app.kubernetes.io/part-of: medicojobs-platform
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels: *availabilityLabels
  template:
    metadata:
      labels: *availabilityLabels
    spec:
      containers:
        - name: availability-service
          image: 123456789012.dkr.ecr.ap-south-1.amazonaws.com/medicojob-availability-service:latest
          ports:
            - containerPort: 5004
          readinessProbe:
            tcpSocket:
              port: 5004
          livenessProbe:
            tcpSocket:
              port: 5004
          resources:
            requests:
              cpu: 75m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: availability-service
  namespace: medicojobs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: availability-service
    app.kubernetes.io/part-of: medicojobs-platform
  ports:
    - name: http
      port: 5004
      targetPort: 5004
