k8s/base/course-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: medicojobs
  labels: &courseLabels
    app.kubernetes.io/name: course-service
    app.kubernetes.io/part-of: medicojobs-platform
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels: *courseLabels
  template:
    metadata:
      labels: *courseLabels
    spec:
      containers:
        - name: course-service
          image: 123456789012.dkr.ecr.ap-south-1.amazonaws.com/medicojob-course-service:latest
          ports:
            - containerPort: 5007
          readinessProbe:
            tcpSocket:
              port: 5007
          livenessProbe:
            tcpSocket:
              port: 5007
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
  namespace: medicojobs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: course-service
    app.kubernetes.io/part-of: medicojobs-platform
  ports:
    - name: http
      port: 5007
      targetPort: 5007
