k8s/base/location-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
  namespace: medicojobs
  labels: &locationLabels
    app.kubernetes.io/name: location-service
    app.kubernetes.io/part-of: medicojobs-platform
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels: *locationLabels
  template:
    metadata:
      labels: *locationLabels
    spec:
      containers:
        - name: location-service
          image: 123456789012.dkr.ecr.ap-south-1.amazonaws.com/medicojob-location-service:latest
          ports:
            - containerPort: 5005
          readinessProbe:
            tcpSocket:
              port: 5005
          livenessProbe:
            tcpSocket:
              port: 5005
          resources:
            requests:
              cpu: 75m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: location-service
  namespace: medicojobs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: location-service
    app.kubernetes.io/part-of: medicojobs-platform
  ports:
    - name: http
      port: 5005
      targetPort: 5005
